# mathling

./: .gitignore  Cargo.toml  README.md  language.db  language.test  main  rust-toolchain.tomlq  tokens.txt
research/: process.md
src/: codegen.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  math_lexing.rs  parse.rs  parser.rs  primitives.rs  symbols.rs  traits.rs  types.rs  util.rs
theory/: syntax_tree_guide.md
