[package]
name = "make_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
inkwell = { version = "0.5.0", features = ["llvm18-0"]}
miette = { version = "7.4.0", features = ["fancy"] }
nom = "7.1.3"
nom_locate = "4.2.0"
tracing = "0.1.40"

