[package]
name = "mathling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm18-0"]}
miette = { version = "7.4.0", features = ["fancy"] }
nom = "8.0.0"
nom_locate = "5.0.0"
thiserror = "2.0.11"

[lint.cargo]
unsafe = false
